# pricing

./: .env.example  README.md  docker-compose.yml  manage.py  pyproject.toml
bababos/: asgi.py  settings.py  urls.py  wsgi.py
bababos/pricing/: apps.py
bababos/pricing/management/commands/: analyze.py  decide.py  feed.py
bababos/pricing/migrations/: 0001_initial.py  0002_supplier_deleted_at.py  0003_alter_supplierprice_product_transaction.py  0004_supplierprice_latest.py  0005_remove_transaction_supplier_and_more.py  0006_transaction_note.py  0007_alter_transaction_unique_together.py  0008_rename_profit_margin_transaction_analyzed_profit_margin.py
bababos/pricing/models/: __init__.py  customer.py  logistic.py  logistic_price.py  product.py  purchase_order.py  quotation.py  region.py  request_for_quotation.py  supplier.py  supplier_price.py  transaction.py
bababos/pricing/services/: __init__.py  logistic_recommender.py  supplier_recommender.py
bababos/pricing/tests/: test_supplier_recommender.py
bababos/utilities/: apps.py
bababos/utilities/tests/: test_collection.py
bababos/utilities/utils/: __init__.py  collection.py  model.py
resources/: customer.csv  pricelist.csv  rfq-customer.csv  supplier.csv
